tests/baselines/reference/dependentReturnType2.errors.txt
dependentReturnType2.ts(3,62): error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
dependentReturnType2.ts(6,9): error TS2322: Type 'string' is not assignable to type 'T extends { a: string; } ? number : string | number'.


==== dependentReturnType2.ts (2 errors) ====
    declare function q(x: object): x is { b: number };
    
    function foo<T extends { a: string } | { b: number }>(x: T): T extends { a: string } ? number : (string | number) {
                                                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
        if (q(x)) {
            x.b;
            return "";
            ~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'T extends { a: string; } ? number : string | number'.
        }
    }
    
    let y = { a: "", b: 1 }
    const r = foo<{ a: string }>(y); // number